--- a/templates/game.html
+++ b/templates/game.html
@@ -26,7 +26,7 @@
 </div>
 
 <script>
-// UWAGA: KOD GRY ZNAJDUJE SIĘ PONIŻEJ
+// --- GRA ---
 const canvas = document.getElementById('game');
 const context = canvas.getContext('2d');
 const grid = 15;
